@@ -3,7 +3,7 @@
 .\"
 .\"     Copyright (C) 1996-1998 Michael R. Elkins <me@cs.hmc.edu>
 .\"	Copyright (C) 1998-1999 Thomas Roessler <roessler@guug.de>
-.\"	Copyright (C) 2005-2016 Roland Rosenfeld <roland@spinnaker.de>
+.\"	Copyright (C) 2005-2018 Roland Rosenfeld <roland@spinnaker.de>
 .\" 
 .\"     This program is free software; you can redistribute it and/or modify
 .\"     it under the terms of the GNU General Public License as published by
