@@ -1,6 +1,6 @@
 /*
  *  Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
- *  Copyright (C) 2000-2016  Roland Rosenfeld <roland@spinnaker.de>
+ *  Copyright (C) 2000-2018  Roland Rosenfeld <roland@spinnaker.de>
  *
  *  This program is free software; you can redistribute
  *  it and/or modify it under the terms of the GNU
