@@ -2,7 +2,7 @@
 #
 # -*-sh-*-
 #     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                   1999-2016  Roland Rosenfeld <roland@spinnaker.de>
+#                   1999-2018  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
