@@ -2,7 +2,7 @@
 #
 # -*-sh-*-
 #
-#     Copyright (C) 1999-2016  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 1999-2018  Roland Rosenfeld <roland@spinnaker.de>
 #     Copyright (C) 2007       Yaroslav Halchenko <debian@onerussian.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
