@@ -3,7 +3,7 @@
 # -*-sh-mode-*-
 #
 #     Copyright (C) 1998  Thomas Roessler <roessler@guug.de>
-#     Copyright (C) 1999-2006  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 1999-2018  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
