@@ -3,7 +3,7 @@
 # -*-sh-mode-*-
 #
 #     Copyright (C) 2000      Ross Campbell <rcampbel@us.oracle.com>
-#     Copyright (C) 2000-2014 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2000-2018 Roland Rosenfeld <roland@spinnaker.de>
 #     Copyright (C) 2012      Alfredo Finelli <0x4146@gmail.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
