@@ -4,7 +4,7 @@
 #
 #     Copyright (C) 2000 Torsten Jerzembeck <toje@nightingale.ms.sub.org>
 #     Copyright (C) 2000 Ross Campbell <rcampbel@us.oracle.com>
-#     Copyright (C) 2000-2005 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2000-2018 Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
