@@ -4,7 +4,7 @@
 #
 #     Copyright (c) 2001  Utz-Uwe Haus <haus@uuhaus.de> 2001
 #     Copyright (c) 2003  Aaron Kaplan <kaplan@cs.rochester.edu> 
-#     Copyright (c) 2005-2016  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (c) 2005-2018  Roland Rosenfeld <roland@spinnaker.de>
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
