@@ -4,7 +4,7 @@
 #
 #     m_evolution - Evolution Address book module for lbdb
 #     Copyright (C) 2004 Guido Guenther <agx@sigxcpu.org>
-#     Copyright (C) 2004-2011 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2004-2018 Roland Rosenfeld <roland@spinnaker.de>
 #     Copyright (C) 2008 brian m. carlson <sandals@crustytoothpaste.ath.cx>
 #     Copyright (C) 2009 Jan Larres <jan@majutsushi.net>
 #
