@@ -4,7 +4,7 @@
 #
 #     m_gnomecard - GnomeCard Address book module for lbdb
 #     Copyright (C) 2000 Rick Frankel <rick@rickster.com>
-#                   2000-2005 Roland Rosenfeld <roland@spinnaker.de>
+#                   2000-2018 Roland Rosenfeld <roland@spinnaker.de>
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
