@@ -3,7 +3,7 @@
 # -*-sh-*-
 #
 #     Copyright (C) 2000  Brian Salter-Duke <b_duke@bigpond.net.au>
-#                   2000-2007  Roland Rosenfeld <roland@spinnaker.de>
+#                   2000-2018  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
