@@ -3,7 +3,7 @@
 # -*-sh-*-
 #
 #     Copyright (C) 2003  Brendan Cully <brendan@kublai.com>
-#     Copyright (C) 2005  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2005-2018  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
