@@ -4,7 +4,7 @@
 #
 #     m_palm - Palm address database module for lbdb
 #     Copyright (C) 2000 Dave Pearson <davep@davep.org>
-#     Copyright (C) 2005 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2005-2018 Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
