@@ -2,7 +2,7 @@
 ## -*- sh -*-
 ##
 ## Copyright (C) 2002 Gergely Nagy <algernon@debian.org>
-## Copyright (C) 2002-2005 Roland Rosenfeld <roland@spinnaker.de>
+## Copyright (C) 2002-2018 Roland Rosenfeld <roland@spinnaker.de>
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
