@@ -3,7 +3,7 @@
 # -*-awk-*-
 #
 #     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                   2000-2017  Roland Rosenfeld <roland@spinnaker.de>
+#                   2000-2018  Roland Rosenfeld <roland@spinnaker.de>
 #                   2007       Yaroslav Halchenko <debian@onerussian.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
