@@ -2,7 +2,7 @@
 #
 #     Copyright (C) 2000-2006 Marc de Courville <marc@courville.org>
 #     Copyright (C) 2009      "Alexandra N. Kossovsky" <sasha@oktetlabs.ru>
-#     Copyright (C) 2005-2016 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2005-2018 Roland Rosenfeld <roland@spinnaker.de>
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
