@@ -1,5 +1,5 @@
 .\" -*-nroff-*-
-.\" Copyright (c) 1999-2005  Roland Rosenfeld <roland@debian.org>
+.\" Copyright (c) 1999-2018  Roland Rosenfeld <roland@spinnaker.de>
 .\"               
 .\" This manual page is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
