@@ -13,7 +13,7 @@
 #
 ##########################################################################
 #
-#   Copyright (C) 1998-2005  Roland Rosenfeld <roland@spinnaker.de>
+#   Copyright (C) 1998-2018  Roland Rosenfeld <roland@spinnaker.de>
 #
 #   This program is free software; you can redistribute it and/or
 #   modify it under the terms of the GNU General Public License as
