@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2000-2005  Roland Rosenfeld <roland@spinnaker.de>
+ *  Copyright (C) 2000-2018  Roland Rosenfeld <roland@spinnaker.de>
  *
  *  This program is free software; you can redistribute
  *  it and/or modify it under the terms of the GNU
